# src/main/java/training/salonzied/dao/entities/ReservationEntity.java
@@ -1,0 +1,58 @@
+package training.salonzied.dao.entities;
+
+import com.salonized.dto.ReservationStatus;
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+
+import java.time.LocalDateTime;
+
+@Entity
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+@Table(name = "reservations")
+public class ReservationEntity {
+    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false, unique = true)
+    private String publicId;
+    @Column(name = "start_time", nullable = false, updatable = false)
+    private LocalDateTime startTime;
+    @Column(nullable = false, name = "duration_of_booking")
+    private Integer durationOfBooking;
+    @Column(length = 512)
+    private String notes;
+
+
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false, name = "status")
+    private ReservationStatus status;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "user_id", nullable = false)
+    private UserEntity user;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "salon_id", nullable = false)
+    private SalonEntity salon;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "treatment_id", nullable = false)
+    private TreatmentEntity treatment;
+
+    @CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    private LocalDateTime createdAt;
+    @UpdateTimestamp
+    @Column(name = "updated_at")
+    private LocalDateTime updatedAt;
+
+
+}
