# src/main/java/training/salonzied/dao/entities/SalonEntity.java
@@ -1,14 +1,16 @@
 package training.salonzied.dao.entities;
 
 import jakarta.persistence.*;
-import java.time.LocalDateTime;
-import java.util.List;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+
+import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
 
 @Entity
 @Table(name = "salons")
@@ -16,6 +18,8 @@ import org.hibernate.annotations.CreationTimestamp;
 @AllArgsConstructor
 @Builder
 @Data
+@EqualsAndHashCode(exclude = "reservations")
+@ToString(exclude = "reservations")
 public class SalonEntity {
   @Id
   @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -34,10 +38,30 @@ public class SalonEntity {
   @CreationTimestamp
   @Column(name = "created_at", nullable = false, updatable = false)
   private LocalDateTime createdAt;
+  @UpdateTimestamp
   @Column(name = "updated_at")
   private LocalDateTime updatedAt;
-
   @Column
-  @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
-  private List<CategoryEntity> treatmentCategories;
+  @OneToMany(mappedBy = "salon",
+          cascade = CascadeType.ALL,
+          orphanRemoval = true)
+  private List<ReservationEntity> reservations;
+
+  @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true, mappedBy = "salon")
+  private List<CategoryEntity> categories;
+
+  @ElementCollection
+  @CollectionTable(
+          name = "salon_opening_hours",
+          joinColumns = @JoinColumn(name = "salon_id")
+  )
+  private List<WorkingHour> openingHours;
+
+  @ElementCollection
+  @CollectionTable(
+          name = "salon_special_opening_hours",
+          joinColumns = @JoinColumn(name = "salon_id")
+  )
+  private List<SpecialOpeningHours> specialOpeningHours;
+
 }
